data/derived/comb/progs/unify/prog4261.ml.out
Characters 0-2:
  ""a"";;
  ^^
Error: This expression has type string
       This is not a function; it cannot be applied.
